# Galatea-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.ps1
.agent/skills/rust_code_guide/: SKILL.md
.github/ISSUE_TEMPLATE/: detection-source-request.md  general-feature-request.md
.github/workflows/: semgrep.yml
docs/: roadmap.md  setup.md
docs/architecture/: architecture.md
docs/endpoint/: setup.md
docs/endpoint/architecture/: database_schema.md  ipc.md
docs/features/: ml_classifier.md
endpoint/agent/: Cargo.toml
endpoint/agent/src/: config.rs  db.rs  main.rs  utils.rs
endpoint/agent/src/analyzer/: authenticode.rs  heuristics.rs  ml.rs  mod.rs  packers.rs
endpoint/agent/src/cache/: static_analyzer_cache.rs
endpoint/agent/src/driver/: io.rs  mgmt.rs  mod.rs
endpoint/agent/src/engine/: correlation.rs  ipc_server.rs  mod.rs  process_info.rs
endpoint/agent/src/ipc/: ipc_server.rs  mod.rs
endpoint/agent/src/network/: server.rs
endpoint/agent/src/probes/: file_identity.rs  mod.rs  process_info.rs
endpoint/agent/src/utils/: mod.rs
endpoint/client/: Cargo.toml
endpoint/client/src/: app.rs  main.rs
endpoint/client/src/ui/: detection_list.rs  header.rs  mod.rs  styles.rs
endpoint/driver/: Cargo.toml  driver.inx
endpoint/driver/.cargo/: config.toml
endpoint/driver/src/: apc.rs  callback.rs  ffi.rs  ioctl.rs  lib.rs  utils.rs
endpoint/galatea-agent/: Cargo.toml
endpoint/galatea-agent/src/: config.rs  db.rs  injector.rs  logger.rs  main.rs
endpoint/galatea-agent/src/analyzer/: heuristics.rs  mod.rs
endpoint/galatea-agent/src/cache/: file_context_cache.rs  mod.rs  process_context_cache.rs  static_analyzer_cache.rs
endpoint/galatea-agent/src/communication/: mod.rs
endpoint/galatea-agent/src/communication/driver/: io.rs  mgmt.rs  mod.rs
endpoint/galatea-agent/src/communication/etw/: etw_consumer.rs  mod.rs
endpoint/galatea-agent/src/communication/ipc/: ipc_server.rs  mod.rs
endpoint/galatea-agent/src/communication/network/: server.rs
endpoint/galatea-agent/src/engine/: correlation.rs  mod.rs
endpoint/galatea-agent/src/engine/signatures/: file_signatures.rs  mod.rs  process_signatures.rs
endpoint/galatea-agent/src/ipc/: ipc_server.rs
endpoint/galatea-agent/src/network/: server.rs
endpoint/galatea-agent/src/probes/: process_info.rs
endpoint/galatea-agent/src/static_analyzer/: authenticode.rs  heuristics.rs  ml.rs  mod.rs  packers.rs
endpoint/galatea-agent/src/utils/: hashing.rs  math.rs  mod.rs
endpoint/galatea-client/: Cargo.toml
endpoint/galatea-client/src/: app.rs  ipc_client.rs  main.rs  theme.rs
endpoint/galatea-client/src/ui/: detection_list.rs  file_context_list.rs  header.rs  mod.rs
endpoint/galatea-kernel-filter/: Cargo.toml  build.rs  galatea_kernel_filter.inx
endpoint/galatea-kernel-filter/.cargo/: config.toml
endpoint/galatea-kernel-filter/src/: lib.rs
endpoint/galatea-kernel-filter/src/callbacks/: fs_callbacks.rs  mod.rs
endpoint/galatea-kernel-filter/src/ffi/: flt.rs  mod.rs
endpoint/galatea-kernel-filter/src/io/: filter_port.rs  mod.rs
endpoint/galatea-kernel-sensor/: Cargo.toml  galatea_kernel_sensor.inx
endpoint/galatea-kernel-sensor/src/: apc.rs  callback.rs  ffi.rs  ioctl.rs  lib.rs  utils.rs
endpoint/galatea-shared/: Cargo.toml
endpoint/galatea-shared/src/: id.rs  lib.rs
endpoint/galatea-userland-hooks/: Cargo.toml
endpoint/galatea-userland-hooks/src/: addresses.rs  etw.rs  identity.rs  lib.rs  ssn.rs  stubs.rs  threads.rs
endpoint/hook/: Cargo.toml
endpoint/hook/src/: lib.rs  ssn.rs  stubs.rs  threads.rs
endpoint/shared/: Cargo.toml
endpoint/shared/src/: lib.rs
models/: convert_ember.py  features.txt  model.onnx  train.py
server/api-definition/: Cargo.toml
server/api-definition/src/: lib.rs
server/api-definition/src/secrets/: mod.rs
server/babel-api-definition/: Cargo.toml
server/babel-api-definition/src/: lib.rs
server/babel-api-definition/src/secrets/: mod.rs
server/babel-server/: Cargo.toml
server/babel-server/src/: main.rs  state.rs
server/babel-server/src/db/: agent_db.rs  commands_db.rs  mod.rs  telemetry_db.rs
server/babel-server/src/routes/: agent.rs  api.rs  dashboard.rs  events.rs  layout.rs  mod.rs
server/babel-server/src/utils/: fmt.rs  mod.rs
server/babel-server/static/: cert.pem  key.pem
server/babel-server/web/: dashboard.html
server/server/: Cargo.toml
server/server/src/: config.rs  main.rs  state.rs
server/server/src/db/: commands_db.rs  mod.rs  telemetry_db.rs
server/server/src/routes/: agent.rs  api.rs  dashboard.rs  events.rs  layout.rs  mod.rs
server/server/web/: agent.html  dashboard.html  events.html
server/server/web/static/css/: style.css
server/server/web/static/js/: theme.js
tests/: run-telemetry-full.ps1  run-telemetry-quick.ps1  test-telemetry-load.ps1  test-telemetry-smoke.ps1
