[workspace]
resolver="3"
members = [ 
    "endpoint/galatea-agent", 
    "endpoint/galatea-userland-hooks", 
    "endpoint/galatea-kernel-sensor", 
    "endpoint/galatea-shared", 
    "endpoint/galatea-client", 
    
    "server/babel-server", 
    "server/babel-api-definition"
]

[workspace.dependencies]
async-std = "1.13"
axum = "0.8"
axum-server = "0.8"
chrono = "0.4"
clap = "4.5.58"
ctrlc = "3.5.1"
dunce = "1.0.5"
goblin = "0.10.4"
hex = "0.4.3"
iced = "0.14.0"
md-5 = "0.10.6"
mimic-core = { git = "ssh://git@github.com/Millitarychest/mimic-core-rs.git", branch = "master" }
moka = "0.12.13"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rand = "0.10.0"
rusqlite = "0.38.0"
serde = "1.0.228"
serde_json = "1.0"
threadpool = "1.8.1"
tokio = "1"
tower-http = "0.6"
ureq = "3.2.0"
uuid = "1.20.0"
windows = "0.62.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
