[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
mimic-core = { git = "ssh://git@github.com/Millitarychest/mimic-core-rs.git", branch = "master", features = ["privilege","logger","shell"]}
shared = { path = "../shared" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
] }