[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
goblin = "0.10.4"
hex = "0.4.3"
md-5 = "0.10.6"
mimic-core = { git = "ssh://git@github.com/Millitarychest/mimic-core-rs.git", branch = "master", features = ["privilege","logger","shell"]}
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = "0.38.0"
shared = { path = "../shared" }
threadpool = "1.8.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
] }
