[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
ctrlc = "3.5.1"
dunce = "1.0.5"
goblin = "0.10.4"
hex = "0.4.3"
md-5 = "0.10.6"
mimic-core = { git = "ssh://git@github.com/Millitarychest/mimic-core-rs.git", branch = "master", features = ["privilege","logger","shell"]}
moka = { version = "0.12.13", features = ["sync"] }
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde_json = "1.0"
shared = { path = "../shared", features = ["agent_ipc"] }
threadpool = "1.8.1"
uuid = { version = "1.0", features = ["v4"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
] }
