[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13"
chrono = "0.4"
iced = "0.14.0"
serde_json = "1.0"
shared = { path = "../shared", features = ["client_ipc"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
