[package]
name = "galatea-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
mimic-core = { workspace = true, features = ["privilege", "logger", "shell"] }
babel-api-definition = { path = "../../server/babel-api-definition" }
galatea-shared = { path = "../galatea-shared", features = ["agent_ipc"] }

chrono.workspace = true
ctrlc.workspace = true
dunce.workspace = true
goblin.workspace = true
hex.workspace = true
md-5.workspace = true
moka = { workspace = true, features = ["sync"] }
ndarray.workspace = true
ort.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
serde_json.workspace = true
threadpool.workspace = true
ureq = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_Cryptography_Sip",
] }
regex.workspace = true
