[package]
name = "galatea-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std.workspace = true
chrono.workspace = true
iced.workspace = true
serde_json.workspace = true
shared = { path = "../shared", features = ["client_ipc"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
