[package]
name = "galatea-kernel-filter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
harness = false

[dependencies]
galatea-shared = { path = "../galatea-shared" }

wdk = "0.4.1"
wdk-alloc = "0.4.1"
wdk-panic = "0.4.1"
wdk-sys = "0.5.1"

[build-dependencies]
wdk-build = "0.5.1"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.wdk.driver-model]
target-version = "10.0.26100.0"
driver-type = "WDM"