[package]
name = "galatea-shared"
version = "0.1.0"
edition = "2024"

[features]
default = []
client_ipc = ["dep:serde", "dep:serde_json", "dep:chrono"]
agent_ipc = ["dep:serde", "dep:serde_json", "dep:chrono", "dep:uuid"]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, optional = true, features = ["alloc"] }
chrono = { workspace = true, optional = true, features = ["alloc", "serde"] }
uuid = { workspace = true, optional = true, features = ["v4", "serde"] }
