[package]
name = "galatea-userland-hooks"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
galatea-shared = { path = "../galatea-shared" }
win_etw_macros = "0.1.11"
win_etw_provider = "0.1.14"
windows = { workspace = true, features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Threading", 
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
