[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = []
client_ipc = ["dep:serde", "dep:serde_json", "dep:chrono"]
agent_ipc = ["dep:serde", "dep:serde_json", "dep:chrono", "dep:uuid"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }
uuid = { version = "1.0", optional = true, default-features = false, features = ["v4", "serde"] }

