[package]
name = "babel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
mimic-core = { workspace = true, features = ["logger"] }
api-definition = { path = "../api-definition" }

axum.workspace = true
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
tower-http = { workspace = true, features = ["cors", "fs"] }
rusqlite = { workspace = true, features = ["bundled"] }
r2d2.workspace = true
r2d2_sqlite.workspace = true
clap = { workspace = true, features = ["derive"] }
rand.workspace = true
