[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
mimic-core = { git = "ssh://git@github.com/Millitarychest/mimic-core-rs.git", branch = "master", features = ["logger"]}
api-definition = { path = "../api-definition" }

axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
clap = { version = "4.5.58", features = ["derive"] }
